<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_device"
            android:icon="@drawable/connect_icon"
            android:title="@string/menu_device" />
        <item
            android:id="@+id/nav_terminal"
            android:icon="@drawable/terminal_icon"
            android:title="@string/menu_terminal" />
    </group>

    <item android:title="@string/menu_tools">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_info" />
            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history"
                android:title="@string/menu_history" />
        </menu>
    </item>

</menu>
